--- a/styles/global/_navigation.scss
+++ b/styles/global/_navigation.scss
@@ -1,24 +1,32 @@
+// VARIABLE for hamberger
+
 $animation_timing : 200ms ease-in-out;
 $bar_height: .15rem;
 $bar_width: 1.5rem;
 $bar_gap: .3rem;
 $hamberger_height: calc(($bar_height*3) + ($bar_gap)*2);
-
 $x_width: calc($hamberger_height * 1.41421356237);
 
 .navigation_area {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    position: relative;
+    top: 0%;
+    z-index: 1111;
 }
 
 nav.nav_container {
+    position: fixed;
+    width: 100%;
+    background-color: rgb(36, 225, 225);
     background-color: $color_white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 8rem;
     border-bottom: 1px solid $dark25;
+    z-index: 9999;
 
     .hamberger {
         display: flex;
@@ -27,7 +35,6 @@ nav.nav_container {
         cursor: pointer;
         // background: red;
         width: max-content;
-        z-index: 99;
 
         input {
             appearance: none;
@@ -90,7 +97,7 @@ nav.nav_container {
     position: relative;
     height: 100%;
     transition: all $animation_timing;
-    z-index: 111;
+    z-index: 1;
 
     ul.nav_links {
         position: fixed;
@@ -147,4 +154,19 @@ nav.nav_container {
         width: 50%;
         transition: all $animation_timing;
     }
+}
+
+.overlay {
+    content: "";
+    height: 100vh;
+    width: 100%;
+    background: $dark75;
+    top: 0%;
+    left: 0%;
+    position: fixed;
+    display: none;
+}
+
+.overlay.show {
+    display: initial;
 }
