completed 404 not found page

--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -28,7 +28,7 @@ $heading_5: 1.4rem; //(30px/21px)rem
 $paragraph: 1rem; //(21px/21px)rem
 
 // BORDER RADIUS
-$border-raius: 0.47rem;
+$border_radious: 0.47rem;
 
 
 // LINKS
