--- a/styles/404.scss
+++ b/styles/404.scss
@@ -1,5 +1,6 @@
 @import './global/global';
 @import './global/navigation';
+@import "./global/footer";
 
 // header {
 //     @mixin
@@ -29,11 +30,21 @@ header .error_text_container {
         font-size: $heading_2
     }
 
+    p {
+        color: $dark75;
+    }
+
     .btn {
         padding: 1rem 2rem;
         background-color: $dark100;
         font-family: $open_sans;
         border-radius: $border_radious;
         color: $color_white;
+        transition: .3s ease-in-out;
+        outline: none;
+
+        &:hover {
+            background: $color_primary;
+        }
     }
 }
