about page layout and design done

--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -56,7 +56,6 @@ h6 {
 p {
     font-family: $open_sans;
     font-size: $paragraph;
-    color: $dark100;
 }
 
 //? HEADER FUNCTION
@@ -80,6 +79,65 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@mixin make_contact_section() {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .contact_us_area {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h3 {
+            font-size: $heading_3;
+        }
+
+        p {
+            font-size: $paragraph;
+            color: $dark100;
+        }
+
+        .contact_info {
+            margin-top: 2rem;
+            @extend .contact_us_area;
+
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: .5rem;
+                margin-top: .5rem;
+            }
+
+            svg {
+                fill: $color_primary;
+            }
+        }
+
+        a.btn {
+            margin-top: 3rem;
+            @include make_button($color_white, $color_primary);
+
+            svg {
+                height: 24px;
+                width: 24px;
+                margin-left: 1rem;
+                transition: all .3s ease-in-out;
+
+                path {
+                    fill: $color_white;
+                }
+            }
+
+            &:hover svg {
+                transform: translate(5px);
+            }
+        }
+    }
 }
 
 .main_body {
