--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import "./global/global";
 @import './global/navigation';
+@import './global/footer';
 
 $img_link : url("../assests/images/travelling_2.webp");
 
