--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -85,6 +85,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
 
     .contact_us_area {
         display: flex;
