--- a/styles/portfolio.scss
+++ b/styles/portfolio.scss
@@ -59,6 +59,7 @@ header .hero_text_container {
 
 main {
     section.gallery {
+        margin: 0 8rem;
         margin-top: 4rem;
         display: flex;
         justify-content: center;
@@ -66,32 +67,22 @@ main {
 
         .images {
             gap: 1rem;
-            columns: 4 300px;
-            max-width: 80%;
-
-            li {
-                margin-bottom: 1rem;
-            }
+            columns: 3 200px;
 
             .itembox {
                 width: 100%;
                 height: auto;
                 max-height: 500px;
-                border-radius: $border_radious;
+                margin-bottom: 1rem;
                 overflow: hidden;
-            }
 
-            img {
-                width: 100%;
-                max-height: 500px;
-                object-fit: cover;
-                border-radius: $border_radious;
-                transition: all .2s ease-in-out;
-
-                &:hover {
-                    transform: scale(1.1);
+                img {
+                    width: 100%;
+                    max-height: 500px;
+                    object-fit: cover;
                 }
             }
+
 
             .show_item {
                 animation: show .5s ease 0s 1 forwards;
