--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -4,19 +4,21 @@
 
 $img_link : url("../assests/images/img2.jpeg");
 
+
+//? CONTACT HEADER AREA STYLING start -------------------------------
 header {
     @include make_header($img_link);
 
     .hero_text_container {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
         position: absolute;
+        padding: 1rem 0;
         bottom: 0;
         left: 0;
         width: 100%;
         background: $color_white;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        padding: 1rem 0;
         border-bottom: 1px solid $color_primary;
 
         .contact_info {
@@ -40,11 +42,16 @@ header {
     }
 }
 
+//? CONTACT HEADER AREA STYLING end -------------------------------
+
+//? MAIN BODY STYLING start ---------------------------------------
+
 main {
     padding: 0rem 8rem;
 
-    section {
-        margin: 4rem 0;
+    //? CONTACT INFO AREA STYLING ------------
+    section.contact_info_area {
+        margin-top: 4rem;
         text-align: center;
 
         h1 {
@@ -52,11 +59,12 @@ main {
         }
     }
 
+    //? CONTACT FORM AREA STYLING ------------
     section.contact_form_area {
 
         form {
             width: 60%;
-            margin: auto;
+            margin: 6rem auto;
         }
 
         .input_group_area {
@@ -70,60 +78,56 @@ main {
                 flex-direction: column;
                 align-items: flex-start;
                 justify-content: center;
-                // background-color: bisque;
                 width: 100%;
                 margin-bottom: 2rem;
 
                 input,
                 select,
                 textarea {
+                    outline: none;
                     width: 100%;
                     height: 2.5rem;
-                    border: 2px solid $dark10;
+                    margin-top: .5rem;
+                    padding: .5rem;
                     font-family: $open_sans;
                     font-size: $paragraph;
                     border-radius: $border_radious;
-                    outline: none;
                     background-color: $dark5;
-                    margin-top: .5rem
+                    border: 2px solid $dark10;
                 }
 
                 textarea {
-                    height: 5rem;
+                    height: 8rem;
                     width: 100%;
                     resize: vertical;
-                    max-height: 8rem;
-                    min-height: 2.5rem
+                    max-height: 10rem;
+                    min-height: 3rem
                 }
             }
         }
 
         button.btn {
             @include make_button($color_white, $color_primary);
+            cursor: pointer;
             gap: 1rem;
             width: 100%;
             margin-top: 2rem;
-            cursor: pointer;
             border: none;
             outline: none;
 
             &.disabled {
                 cursor: not-allowed;
-                // pointer-events: none;
                 opacity: 50%;
-
-            }
-
-
-
-            svg {
-                height: 1rem;
-                fill: $color_white;
-                transition: all .3s ease-in-out;
             }
 
             &:hover svg {
-                transform: translate(4px);
+                transform: translate(5px);
+            }
+
+            svg {
+                height: 1rem;
+                transition: all .3s ease-in-out;
+                fill: $color_white;
             }
         }
     }
