--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -28,14 +28,14 @@ $heading_4: 2rem; //(42px/21px)rem
 $heading_5: 1.4rem; //(30px/21px)rem
 $paragraph: 1rem; //(21px/21px)rem
 
-// BORDER RADIUS
+//? BORDER RADIUS
 $border_radious: 0.2rem;
 
 body {
     background-color: $color_white;
 }
 
-// LINKS
+//? LINKS
 li {
     list-style-type: none;
 }
