--- a/styles/about.scss
+++ b/styles/about.scss
@@ -4,17 +4,19 @@
 
 $img_link: url('../assests/images/concert_1.webp');
 
+//? HEADER STYLING
 header {
     @include make_header($img_link);
 }
 
+//? HERO AREA CONTENT STYLING
 header .hero_text_container {
     position: absolute;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    width: 100%;
     color: $color_white;
 
     h1 {
@@ -26,20 +28,22 @@ header .hero_text_container {
     }
 }
 
-main {
-    margin-top: 8rem;
 
+//? MAIN BODY CONTENT STYLING
+main {
     section.section {
-        margin-bottom: 8rem;
+        margin: 8rem 0;
         padding: 0 8rem;
     }
 
+    //? SECTION 1 & 2 ABOUT US AREA STYLING
     section.about_us_area {
         display: flex;
         justify-content: center;
         align-items: flex-start;
         gap: 8rem;
 
+        //? TEXT CONTINER STYING
         .about_text_container {
             flex: 1;
 
@@ -48,16 +52,17 @@ main {
             }
 
             h1 {
-                font-size: $heading_3;
                 line-height: 2.5rem;
                 margin-bottom: 2rem;
+                font-size: $heading_3;
             }
 
             p {
-                line-height: 1.5rem;
+                line-height: 1.7rem;
             }
         }
 
+        //? IMAGE STYLING
         .about_image_container {
             min-height: 500px;
             position: relative;
@@ -67,20 +72,21 @@ main {
 
             img {
                 position: absolute;
-                width: 100%;
                 object-fit: cover;
+                width: 100%;
             }
         }
     }
 
+    //? SECTION 3 WORK COUNTER STYLING
     section.work_counter {
+        background: linear-gradient(90deg, $dark75, $dark75), url('../assests/images/hero.jpeg') repeat fixed;
         display: flex;
         align-items: center;
         justify-content: space-between;
         overflow: hidden;
-        background: linear-gradient(90deg, $dark75, $dark75), url('../assests/images/hero.jpeg') repeat fixed;
-        background-size: 100%;
         background-position: center;
+        background-size: 100%;
 
         .work {
             text-align: center;
@@ -93,6 +99,7 @@ main {
         }
     }
 
+    //? SECTION 4 INSTAGRAM AREA STYLING
     section.instagram_work_area {
         h3 {
             font-size: $heading_3;
@@ -103,19 +110,20 @@ main {
             display: flex;
             align-items: center;
             justify-content: space-between;
+            overflow: hidden;
             margin-top: 4rem;
             gap: 1rem;
-            overflow: hidden;
 
             .insta_pic_container {
                 position: relative;
+                overflow: hidden;
                 height: 300px;
                 top: 0;
+                left: 0;
                 flex: 1;
-                overflow: hidden;
 
                 &:hover img {
-                    transform: scale(1.04);
+                    transform: scale(1.05);
                 }
 
                 img {
@@ -131,6 +139,7 @@ main {
         }
     }
 
+    //? FOR CONTACT US SECTION
     section.contact_us {
         margin: 8rem 8rem;
         @include make_contact_section();
