--- a/styles/portfolio.scss
+++ b/styles/portfolio.scss
@@ -16,9 +16,7 @@ header .hero_text_container {
     transform: translate(-50%, -50%);
     text-align: center;
     width: 100%;
-    // background: lightcoral;
     color: $color_white;
-    // z-index: -1;
 
     h1 {
         font-size: $heading_1;
@@ -29,24 +27,24 @@ header .hero_text_container {
     }
 }
 
+
+
+//? STYLING ALL THE FULTER BUTTONS start ----------------------------
 .filter_links_container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 80%;
-    // background: lightcoral;
+    margin: 8rem auto 4rem auto;
     padding: 0rem 8rem;
-    margin: auto;
-    margin-top: 8rem;
 
     .filter_links {
         cursor: pointer;
-        font-family: $open_sans;
-        // background: $dark25;
-        padding: 0.5rem;
         width: 100%;
+        padding: 0.5rem;
         margin: 0rem .5rem;
         text-align: center;
+        font-family: $open_sans;
         font-size: $paragraph;
         color: $dark100;
 
@@ -57,6 +55,10 @@ header .hero_text_container {
     }
 }
 
+//? STYLING ALL THE FULTER BUTTONS end ------------------------------
+
+
+//? MAIN BODY STYLING start --------------------------
 main {
     section.gallery {
         margin: 0 8rem;
@@ -75,6 +77,7 @@ main {
                 max-height: 500px;
                 margin-bottom: 1rem;
                 overflow: hidden;
+                transform-origin: center;
 
                 img {
                     width: 100%;
@@ -83,26 +86,26 @@ main {
                 }
             }
 
-
             .show_item {
                 animation: show .5s ease 0s 1 forwards;
-                transform-origin: center;
             }
 
             .hide_item {
                 animation: hide .5s ease 0s 1 forwards;
-                transform-origin: center;
             }
-
         }
     }
 
     section.contact_us {
-        margin: 8rem 8rem;
-        @include make_contact_section()
+        margin: 8rem 0;
+        @include make_contact_section();
     }
 }
 
+//? MAIN BODY STYLING end --------------------------
+
+
+//? IMAGE HIDE ANIMATION
 @keyframes hide {
     0% {
         transform: scale(1);
@@ -116,6 +119,7 @@ main {
     }
 }
 
+//? IMAGE SHOW ANIMATION 
 @keyframes show {
     0% {
         transform: scale(0);
