made the navigation and  footer responsive

--- a/styles/global/_footer.scss
+++ b/styles/global/_footer.scss
@@ -3,8 +3,8 @@ footer.footer_area {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background: $dark10;
     padding: 1rem 8rem;
+    background: $dark10;
     font-family: $open_sans;
     font-size: $paragraph;
     color: $dark75;
@@ -15,8 +15,8 @@ footer.footer_area {
         align-items: center;
 
         a {
-            color: $dark75;
             margin: 0rem 1rem;
+            color: $dark75;
 
             &:hover {
                 color: $dark100;
@@ -30,13 +30,57 @@ footer.footer_area {
         align-items: center;
 
         .social_icon svg {
-            color: $dark75;
             margin: 0rem 1rem;
             transition: .3s ease-in-out;
+            color: $dark75;
 
             &:hover {
                 color: $dark100;
             }
+        }
+    }
+}
+
+
+//? RESPONSIVE STYLING
+@media screen and (max-width:1040px) {
+    footer.footer_area {
+        font-size: $paragraph_t;
+        padding: 1rem 2rem;
+
+        .social_container {
+            svg {
+                height: .8rem;
+                width: .8rem;
+            }
+        }
+
+        .copyright_text p {
+            font-size: .8rem;
+        }
+    }
+}
+
+@media screen and (max-width:900px) {
+    footer.footer_area {
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+        gap: .7rem;
+        padding: 1rem 1rem;
+
+        .links.dots {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 375px) {
+    footer.footer_area {
+        align-items: flex-start;
+        padding: 1rem 0rem;
+
+        .short_links a {
+            margin: 0rem .5rem;
         }
     }
 }
