--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -28,6 +28,12 @@ $heading_4: 2rem; //(42px/21px)rem
 $heading_5: 1.4rem; //(30px/21px)rem
 $paragraph: 1rem; //(21px/21px)rem
 
+//? FONT SIZE FOR TABLET
+$heading_1_t: 4.2rem; //(90px/21px)rem
+$heading_2_t: 3rem; //(64px/21px)rem
+$heading_3_t: 2.1rem; //(45px/21px)rem
+$paragraph_t: 0.7rem; //(16px/21px)rem
+
 //? BORDER RADIUS
 $border_radious: 0.2rem;
 
