--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all .3s ease-in-out;
 }
 
 
@@ -46,10 +47,12 @@ li {
     list-style-type: none;
 }
 
+//? ANCHER TAG
 a {
     text-decoration: none;
 }
 
+//? HEADING STYLING
 h1,
 h2,
 h3,
@@ -59,6 +62,7 @@ h6 {
     font-family: $playfair_display;
 }
 
+//? PARAGRAPH STYLING
 p {
     font-family: $open_sans;
     font-size: $paragraph;
@@ -87,6 +91,7 @@ p {
     align-items: center;
 }
 
+//? STYLING FOR CONTACT SECTION
 @mixin make_contact_section() {
     display: flex;
     justify-content: center;
