--- a/styles/global/_responsive.scss
+++ b/styles/global/_responsive.scss
@@ -3,3 +3,15 @@
         @content;
     }
 }
+
+@mixin mobile {
+    @media screen and (max-width: 430px) {
+        @content;
+    }
+}
+
+@mixin mobile_small {
+    @media screen and (max-width: 320px) {
+        @content;
+    }
+}
