--- a/styles/global/_navigation.scss
+++ b/styles/global/_navigation.scss
@@ -15,7 +15,7 @@ $x_width: calc($hamberger_height * 1.41421356237);
 nav.nav_container {
     position: fixed;
     width: 100%;
-    background-color: rgb(36, 225, 225);
+    // background-color: rgb(36, 225, 225);
     background-color: $color_white;
     display: flex;
     justify-content: space-between;
@@ -174,6 +174,10 @@ nav.nav_container {
 //? RESPONSIVE STYLING ----------------------------------------- 
 
 @media screen and (max-width: 768px) {
+    nav.nav_container {
+        padding: 1rem 4rem;
+    }
+
     .social_container {
         display: none;
     }
@@ -195,16 +199,10 @@ nav.nav_container {
 
 @media screen and (max-width: 480px) {
     nav.nav_container {
-        padding: 1rem 4rem;
+        padding: 1rem 2rem;
 
         .logo_container img {
             height: 2rem;
         }
-    }
-}
-
-@media screen and (max-width: 320px) {
-    nav.nav_container {
-        padding: 1rem 1.5rem;
     }
 }
