--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -173,10 +173,27 @@ main {
 }
 
 @include mobile {
+
+    header {
+        .hero_text_container {
+            .contact_info a {
+                svg {
+                    height: .7rem;
+                }
+
+                p {
+                    font-size: $paragraph_t;
+                }
+            }
+        }
+    }
+
     main {
         padding: 0rem 2rem;
 
         section.contact_info_area {
+            text-align: left;
+
             h1 {
                 font-size: $heading_3_t;
             }
@@ -190,6 +207,12 @@ main {
 
                 .input_group {
                     margin-bottom: 1rem;
+                }
+
+                textarea {
+                    height: 5rem !important;
+                    max-height: 8rem;
+                    min-height: 3rem
                 }
             }
 
